2000-04-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/mq2.c, scheduler/mq2auth.c, scheduler/prototypes.h,
	  scheduler/scheduler.h, scheduler/scheduler.c, scheduler/transport.c:
	    Hooks for verifying MAILQv2 contactee IP address.

	* router/db.c:
	    Mathias Ulrichs <smurf@noris.de> suggest negative cache
	    for DB lookup related caches.  It is simple to do, but
	    not so simple to explain to be usefull...

2000-04-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/msgerror.c, scheduler/prototypes.h, scheduler/threads.c,
	  scheduler/transport.c:
	    Tracked possible reasons for processing crashes when maxthr>1.

	* transports/smtp/smtp.c:
	    Changed the commentary log accumulation method, now
	    it will clear only at "MAIL FROM..." and from then
	    on collect all until next "MAIL FROM...".
	    Should make easier to understand some odd error reports.

	* scheduler/scheduler.c, scheduler/threads.c, scheduler/update.c:
	    Added some debugging related  memset()s just before freeing
	    some pointer containing memory blocks.
	    Also modified unvertex() slightly to forward nextfeed in
	    case current vertex is (at all) in any sort of processing.

2000-04-07  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/update.c:
	    Log only really important diagnostics about error
	    conditions in the system, not errors in email receiving.

	* scheduler/threads.c:
	    One instance of vertex free() has been processed
	    improperly.  If the 'nextfeed' is still pointing
	    to the vertex which is being deleted, it must be
	    advanced..  Although getting this means that the
	    scheduler has just fed the same job twice to TAs..

2000-04-06  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtptls.c:
	    Disable TLS read_ahead setting.  That mode doesn't
	    work quite well, and can definitely groak against
	    Stalker Software's  CommuniGate Pro smtpserver when
	    running in PIPELINING mode.
